--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -9,19 +9,20 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="https://media-exp1.licdn.com/dms/image/C4D03AQHcIjSKqB6CKA/profile-displayphoto-shrink_800_800/0/1530025114268?e=1651708800&v=beta&t=GSTcusPg-3GbQdjl68nFddNB5WgcJ3xwjp_F77NrFnA" alt="Headshot of Austin Crossman who has brown hair, brown eyes"></td>
+                <td><img src="https://avatars.githubusercontent.com/u/88110892?v=4" width= 150px alt="Headshot of Austin Crossman who has brown hair, brown eyes"></td>
                 <td><h1><a href="https://www.linkedin.com/in/austin-crossman/">Austin Crossman</h1></a>
-                <p><em>Aspiring Web Developer</em></p>
-                <p>I am a novice Software Engineering. I love coffee and brew my own kombucha.</p></td>
+                <p><em>Master of Science in Software Engineering Candidate</em></p>
+                <p>A software professional based in Minneapolis, Minnesota. With seven years of experience in the marketing industry, Austin has a proven track record of driving successful campaigns and generating demand. He is now transitioning to a career in software engineering, with a focus on mobile app development for iOS. Austin's unique combination of marketing and technical know-how will serve him well to create user-friendly and innovative mobile solutions.</p></td>
             </tr>
         </table>
         <hr>
-        <h3>Education</h3>
+        <h3>📚 Education</h3>
         <ul>
-            <li>University of St. Thomas - Bachelor of Science: Business (2014-2019)</li>
+            <li>University of St. Thomas - Bachelor of Science: Software Engineering (2022-Present)</li>
+            <li>University of St. Thomas - Bachelor of Arts: Business Management (2014-2019)</li>
             <li>De Pere High School (2010-2014)</li>
         </ul>
-        <h3>Work experience</h3>
+        <h3>💼 Work experience</h3>
         <table>
             <thead>
                 <tr>
@@ -42,7 +43,7 @@
                 <td>Campagin Planner</td>
             </tr>
         </table>
-        <h3>Skills</h3>
+        <h3>💻 Skills</h3>
         <table cellspacing="20">
             <tr>
                 <td>iOS Development ⭐️⭐️⭐️⭐️⭐️</td>
@@ -50,7 +51,7 @@
             </tr>
             <tr>
                 <td>Web Development ⭐️⭐️</td>
-                <td>Barista ⭐️⭐️⭐️</td>
+                <td>Python ⭐️⭐️⭐️</td>
             </tr>
         </table>
         <hr>
