--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -5,6 +5,19 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Austin's Personal Site</title>
+        <style>
+            body {
+                background-color: #eeeeee;
+            }
+
+            hr {
+                border-style: none;
+                border-top-style: dotted;
+                border-color: #DDDDDD;
+                border-width: 5px;
+                width: 5%;
+            }
+        </style>
     </head>
     <body>
         <table cellspacing="20">
@@ -22,6 +35,7 @@
             <li>University of St. Thomas - Bachelor of Arts: Business Management (2014-2019)</li>
             <li>De Pere High School (2010-2014)</li>
         </ul>
+        <hr>
         <h3>💼 Work experience</h3>
         <table>
             <thead>
@@ -43,6 +57,7 @@
                 <td>Campagin Planner</td>
             </tr>
         </table>
+        <hr>
         <h3>💻 Skills</h3>
         <table cellspacing="20">
             <tr>
